* Version 1.1.2 (unreleased)
 ** Packaging improvements.

* Version 1.1.1 (released 2015-11-16)
 ** Better handling of intermittent device disconnects.

* Version 1.1.0 (released 2015-11-12)
 ** Added support for ECC P-384 when supported by the device.
 ** Added usage policy when supported by the device.
 ** Update to libykpiv1.

* Version 1.0.2 (released 2015-05-18)
 ** Fix bug preventing device from being found with multiple card readers attached.
 ** Don't save window position as it causes problems with multi-monitor setups.

* Version 1.0.1 (released 2015-04-16)
 ** Packaging improvements release, no new features.

* Version 1.0.0 (released 2015-04-14)
 ** Initial version.