@@ -64,10 +64,12 @@ class SETTINGS:
     PIN_AS_KEY = Setting('pin_as_key', True, bool)
     PIN_EXPIRATION = Setting('pin_expiration', 0, int)
     PIN_POLICY = Setting('pin_policy', None, str)
+    PIN_POLICY_SLOTS = Setting('pin_policy_slots', [], list)
     SHOWN_OUT_FORMS = Setting('shown_outs', default_outs(), list)
     SHOWN_SLOTS = Setting('shown_slots', sorted(CERT_SLOTS.keys()), list)
     SUBJECT = Setting('subject', '/CN=%s' % getuser(), str)
     TOUCH_POLICY = Setting('touch_policy', False, bool)
+    TOUCH_POLICY_SLOTS = Setting('touch_policy_slots', [], list)
 
 
 class SettingsOverlay(object):
